--- a/src/app/fact/fact.component.html
+++ b/src/app/fact/fact.component.html
@@ -5,55 +5,59 @@
       <div class="form-group">
         <label class="col-sm-3 col-form-label" for="fact-id">ID</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" name="fact-id" id="fact-id" placeholder="id">
+          <input type="text" class="form-control" name="fact-id" [(ngModel)]="fact._id" id="fact-id" placeholder="id">
         </div>
       </div>
       <div class="form-group">
         <label class="col-sm-3 col-form-label" for="fact-user">User</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" name="fact-user" id="fact-user" placeholder="user">
+          <input type="text" class="form-control" name="fact-user" [(ngModel)]="fact.user" id="fact-user" placeholder="user">
         </div>
       </div>
       <div class="form-group">
         <label class="col-sm-3 col-form-label" for="fact-text">Text</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" name="fact-text" id="fact-text" placeholder="text">
+          <input type="text" class="form-control" name="fact-text" [(ngModel)]="fact.text" id="fact-text" placeholder="text">
         </div>
       </div>
       <div class="form-group">
         <label class="col-sm-3 col-form-label" for="fact-update">Update at</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" name="fact-update" id="fact-update" placeholder="update at">
+          <input type="text" class="form-control" name="fact-update" [(ngModel)]="fact.update" id="fact-update"
+            placeholder="update at">
         </div>
       </div>
       <div class="form-group">
         <label class="col-sm-3 col-form-label" for="fact-create">Create at</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" name="fact-create" id="fact-create" placeholder="create at">
+          <input type="text" class="form-control" name="fact-create" [(ngModel)]="fact.create" id="fact-create"
+            placeholder="create at">
         </div>
       </div>
       <div class="form-group">
         <label class="col-sm-3 col-form-label" for="fact-delete">Delete</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" name="fact-delete" id="fact-delete" placeholder="delete">
+          <input type="text" class="form-control" name="fact-delete" [(ngModel)]="fact.delete" id="fact-delete"
+            placeholder="delete">
         </div>
       </div>
       <div class="form-group">
         <label class="col-sm-3 col-form-label" for="fact-type">Type</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" name="fact-type" id="fact-type" placeholder="delete">
+          <input type="text" class="form-control" name="fact-type" [(ngModel)]="fact.type" id="fact-type" placeholder="delete">
         </div>
       </div>
       <div class="form-group">
         <label class="col-sm-3 col-form-label" for="fact-source">Source</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" name="fact-source" id="fact-source" placeholder="source">
+          <input type="text" class="form-control" name="fact-source" [(ngModel)]="fact.source" id="fact-source"
+            placeholder="source">
         </div>
       </div>
       <div class="form-group">
         <label class="col-sm-3 col-form-label" for="fact-used">Used</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" name="fact-used" id="fact-used" placeholder="used">
+          <input type="text" class="form-control" name="fact-used" [(ngModel)]="fact.used" id="fact-used" placeholder="used">
         </div>
       </div>
       <div class="form-group">
